src/objects/OrderStageGuidance__mdt.object
<CustomObject>
    <description>Used to configure stage guidance for the OrderPathCmp shown for Orders in Lightning.</description>
    <fields>
        <fullName>KeyFieldsOptional__c</fullName>
        <label>Key Fields Optional</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>KeyFieldsReadOnly__c</fullName>
        <description>Fields that are required to submit for approval, but read only in the Key Fields section. Can be left blank.</description>
        <label>Key Fields (ReadOnly)</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>KeyFieldsTitle__c</fullName>
        <defaultValue>&quot;Key Fields&quot;</defaultValue>
        <description>Displayed directly to the user.</description>
        <label>Key Fields Title</label>
        <length>255</length>
        <required>true</required>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>KeyFields__c</fullName>
        <description>List of key fields that are required to submit the order for approval. Example: [&quot;Order_Source__c&quot;,&quot;Distributor__c&quot;,&quot;ShippingAddress&quot;]</description>
        <label>Key Fields</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>OrderStatus__c</fullName>
        <description>This is used to provide the right guidance depending on the Order.Status field.</description>
        <label>Order Status</label>
        <required>true</required>
        <type>Picklist</type>
        <valueSet>
            <restricted>true</restricted>
            <valueSetDefinition>
                <value>
                    <fullName>Created</fullName>
                    <default>true</default>
                    <label>Created</label>
                </value>
                <value>
                    <fullName>Submitted</fullName>
                </value>
                <value>
                    <fullName>Processing</fullName>
                </value>
                <value>
                    <fullName>Activated</fullName>
                </value>
                <value>
                    <fullName>Rejected</fullName>
                </value>
                <value>
                    <fullName>ON HOLD</fullName>
                    <isActive>false</isActive>
                    <label>ON HOLD</label>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>Pricebook2Id__c</fullName>
        <description>Used to query the right guidance depending on Order.Pricebook2Id. If left blank, this record becomes the default global configuration.</description>
        <label>Price Book</label>
        <length>18</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>StageGuidanceTitle__c</fullName>
        <defaultValue>&quot;Stage Guidance&quot;</defaultValue>
        <description>Displayed directly to the user. Title of the Stage Guidance section.</description>
        <label>Stage Guidance Title</label>
        <length>255</length>
        <required>true</required>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>StageGuidance__c</fullName>
        <description>Displayed directly to the user. This is the guidance text shown in the Stage Guidance section.</description>
        <label>Stage Guidance</label>
        <length>32768</length>
        <type>LongTextArea</type>
    </fields>
    <label>Order Stage Guidance</label>
    <pluralLabel>Order Stage Guidance</pluralLabel>
</CustomObject>